# EMBD_X302_wk5

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  ds18b20_lowlevel.c  ds18b20_lowlevel.h  httpClient.c  httpClient.h  httpServer.c  httpServer.h  main.c  misc.c  misc.h  wifi.c  wifi.h
main/web/: page1.html
